a tick smaller proxy view to avoid scrollbars

--- a/src/styles/_view.scss
+++ b/src/styles/_view.scss
@@ -52,7 +52,8 @@ svg {
     }
 
     iframe {
-      border: 0;
+      margin: -1px; // to fix some corner case regarding positioning
+      border: none;
       width: 100%;
       height: 100%;
     }
